@@ -61,12 +61,12 @@ $stats['types'] = array (
 				 'default' => '',
 				 'name' =>'type',
 				 'text' => _("Show images with comments - latest are shown first"),
-				 'linktext' => _("most comments")),
+				 'linktext' => _("latest comments")),
 	'ratings'	=> array('type' => 'radio',
 				 'default' => '',
 				 'name' =>'type',
 				 'text' => _("Show images with the highest ratings first"),
-				 'linktext' => ''),
+				 'linktext' => _('highest ratings')),
 	'random'	=> array('type' => 'radio',
 				 'default' => '',
 				 'name' =>'type',
